crates/rattler_installs_packages/src/artifacts/snapshots/rattler_installs_packages__artifacts__sdist__tests__sdist_metadata.snap
---
source: crates/rattler_installs_packages/src/artifacts/sdist.rs
expression: result.1
---
WheelCoreMetadata {
    name: PackageName {
        source: "rich",
        normalized: "rich",
    },
    version: Version {
        epoch: 0,
        release: [
            13,
            6,
            0,
        ],
        pre: None,
        post: None,
        dev: None,
        local: None,
    },
    metadata_version: MetadataVersion(
        Version {
            epoch: 0,
            release: [
                2,
                1,
            ],
            pre: None,
            post: None,
            dev: None,
            local: None,
        },
    ),
    requires_dist: [
        Requirement {
            name: "ipywidgets",
            extras: None,
            version_or_url: Some(
                VersionSpecifier(
                    VersionSpecifiers(
                        [
                            VersionSpecifier {
                                operator: GreaterThanEqual,
                                version: Version {
                                    epoch: 0,
                                    release: [
                                        7,
                                        5,
                                        1,
                                    ],
                                    pre: None,
                                    post: None,
                                    dev: None,
                                    local: None,
                                },
                            },
                            VersionSpecifier {
                                operator: LessThan,
                                version: Version {
                                    epoch: 0,
                                    release: [
                                        9,
                                    ],
                                    pre: None,
                                    post: None,
                                    dev: None,
                                    local: None,
                                },
                            },
                        ],
                    ),
                ),
            ),
            marker: Some(
                Expression(
                    MarkerExpression {
                        l_value: Extra,
                        operator: Equal,
                        r_value: QuotedString(
                            "jupyter",
                        ),
                    },
                ),
            ),
        },
        Requirement {
            name: "markdown-it-py",
            extras: None,
            version_or_url: Some(
                VersionSpecifier(
                    VersionSpecifiers(
                        [
                            VersionSpecifier {
                                operator: GreaterThanEqual,
                                version: Version {
                                    epoch: 0,
                                    release: [
                                        2,
                                        2,
                                        0,
                                    ],
                                    pre: None,
                                    post: None,
                                    dev: None,
                                    local: None,
                                },
                            },
                        ],
                    ),
                ),
            ),
            marker: None,
        },
        Requirement {
            name: "pygments",
            extras: None,
            version_or_url: Some(
                VersionSpecifier(
                    VersionSpecifiers(
                        [
                            VersionSpecifier {
                                operator: GreaterThanEqual,
                                version: Version {
                                    epoch: 0,
                                    release: [
                                        2,
                                        13,
                                        0,
                                    ],
                                    pre: None,
                                    post: None,
                                    dev: None,
                                    local: None,
                                },
                            },
                            VersionSpecifier {
                                operator: LessThan,
                                version: Version {
                                    epoch: 0,
                                    release: [
                                        3,
                                        0,
                                        0,
                                    ],
                                    pre: None,
                                    post: None,
                                    dev: None,
                                    local: None,
                                },
                            },
                        ],
                    ),
                ),
            ),
            marker: None,
        },
        Requirement {
            name: "typing-extensions",
            extras: None,
            version_or_url: Some(
                VersionSpecifier(
                    VersionSpecifiers(
                        [
                            VersionSpecifier {
                                operator: GreaterThanEqual,
                                version: Version {
                                    epoch: 0,
                                    release: [
                                        4,
                                        0,
                                        0,
                                    ],
                                    pre: None,
                                    post: None,
                                    dev: None,
                                    local: None,
                                },
                            },
                            VersionSpecifier {
                                operator: LessThan,
                                version: Version {
                                    epoch: 0,
                                    release: [
                                        5,
                                        0,
                                    ],
                                    pre: None,
                                    post: None,
                                    dev: None,
                                    local: None,
                                },
                            },
                        ],
                    ),
                ),
            ),
            marker: Some(
                Expression(
                    MarkerExpression {
                        l_value: MarkerEnvVersion(
                            PythonVersion,
                        ),
                        operator: LessThan,
                        r_value: QuotedString(
                            "3.9",
                        ),
                    },
                ),
            ),
        },
    ],
    requires_python: Some(
        VersionSpecifiers(
            [
                VersionSpecifier {
                    operator: GreaterThanEqual,
                    version: Version {
                        epoch: 0,
                        release: [
                            3,
                            7,
                            0,
                        ],
                        pre: None,
                        post: None,
                        dev: None,
                        local: None,
                    },
                },
            ],
        ),
    ),
    extras: {
        Extra {
            source: "jupyter",
            normalized: "jupyter",
        },
    },
}
